<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
	android:orientation="vertical" >
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal">
	    
		<TextView
	        android:text="@string/tv_Heading"
	        android:textSize="24sp"
	        android:textColor="#FFFFFF"
	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        />
		
	</LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    
		 <Space
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="10dp"
	    	android:layout_gravity="fill" 
	        />
		 
	 </LinearLayout>
	 
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
		
		<TextView
        android:text="@string/tv_UserName"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
    	android:layout_gravity="left" />
    
	    <EditText 
	        android:id="@+id/etUserName"
	        android:textSize="16sp"
	        android:textColor="#FFFFFF"
	        
	        android:hint="@string/tv_EnterUserName"
        	
        	android:layout_weight="3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	    	android:ems="12"
	        android:inputType="text" />
		
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
		
		<TextView 
	        android:text="@string/tv_Password"
	        android:textSize="20sp"
	        android:textColor="#FFFFFF"
	        
	        android:layout_weight="2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	    	android:layout_gravity="left" />
    
	    <EditText 
	        android:id="@+id/etPassword"
	        android:textSize="16sp"
	        android:textColor="#FFFFFF"
	        
	        android:hint="@string/tv_EnterPassword"
        	
        	android:layout_weight="3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword" />
		
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
		
		<Button        
	        android:id="@+id/btCancel"
	        android:textColor="#FFFFFF"
	        
	        android:layout_weight="2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	    	android:text="@string/bt_Cancel"/>
    
	    <Button         
	        android:id="@+id/btLogin"
	        android:textColor="#FFFFFF"
	        
	        android:layout_weight="3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	    	android:text="@string/bt_Login"/>
		
	</LinearLayout>
	
    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	    
	    <Button
	        android:id="@+id/btNewUser"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	    	android:layout_gravity="center_horizontal"
        	android:textSize="18sp"
	        android:textColor="#0000FF"
	        android:background="#000000"
	        android:text="@string/bt_NewUser"
	        />
	    
	</LinearLayout>    

</LinearLayout>