<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
	android:orientation="vertical"
	android:animateLayoutChanges="true" >
    
    
    <Button 
      		android:layout_width="150dip"
      		android:layout_height="wrap_content"
      		android:text="@string/graph"
      		android:id="@+id/graphButton"
      		
      		
        />
  	<Button 
        	android:layout_width="150dip"
      		android:layout_height="wrap_content"
        	android:text="@string/note"
        	android:id="@+id/noteButton"
        
        />
  	
  	<Button 
        	android:layout_width="150dip"
      		android:layout_height="wrap_content"
      		android:text="@string/sim"
      		android:id="@+id/simButton"
      		
      		
        />

</LinearLayout>
