<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
	android:orientation="vertical" >
    
    <!-- <GridLayout    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    
    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds"
    android:columnOrderPreserved="false"
    
    android:columnCount="6"
    android:rowCount="6"
    android:background="#000000"
        
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
        android:text="@string/tv_Heading"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:
    	android:layout_gravity="center_horizontal"
        />
    
    <TextView
        android:text="@string/tv_UserName"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
    	android:layout_gravity="left"
        />
    
    <EditText 
        android:id="@+id/etUserName"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
    	android:ems="12"
        android:inputType="text"
        />
    
    <TextView 
        android:text="@string/tv_Password"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
    	android:layout_gravity="left"
        />
    
    <EditText 
        android:id="@+id/etPassword"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send" />
    	android:ems="12"
        android:inputType="textPassword"
        />
    
    <Button 
        
        android:id="@+id/btCancel"
        android:textColor="#FFFFFF"
        
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
    	android:text="@string/bt_Cancel"
        />
    
    <Button 
        
        android:id="@+id/btLogin"
        android:textColor="#FFFFFF"
        
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
    	android:text="@string/bt_Login"
        />
    
    <Button
        android:id="@+id/btNewUser"
        android:textSize="18sp"
        android:textColor="#0000FF"tv_NU_Password
        android:background="#000000"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
        android:text="@string/bt_NewUser"
        />
    
    <Space
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
    	android:layout_gravity="fill" 
        />    

	</GridLayout> -->
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal">
	    
		<TextView
	        android:text="@string/tv_NU_Heading"
	        android:textSize="24sp"
	        android:textColor="#FFFFFF"
	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        />
		
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    
	 <Space
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="10dp"
    	android:layout_gravity="fill" 
        />
	 </LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
		
		<TextView
        android:text="@string/tv_NU_UserName"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
    	android:layout_gravity="left" />
    
	    <EditText 
	        android:id="@+id/NU_EtUserName"
	        android:textSize="16sp"
	        android:textColor="#FFFFFF"
	        
	        android:hint="@string/tv_EnterUserName"
        	
        	android:layout_weight="3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	    	android:ems="12"
	        android:inputType="text" />
		
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
		
		<TextView 
	        android:text="@string/tv_NU_Password"
	        android:textSize="20sp"
	        android:textColor="#FFFFFF"
	        
	        android:layout_weight="2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	    	android:layout_gravity="left" />
    
	    <EditText 
	        android:id="@+id/NU_EtPassword"
	        android:textSize="16sp"
	        android:textColor="#FFFFFF"
	        
	        android:hint="@string/tv_EnterPassword"
        	
        	android:layout_weight="3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword" />
		
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
		
		<TextView 
	        android:text="@string/tv_NU_ConfPassword"
	        android:textSize="20sp"
	        android:textColor="#FFFFFF"
	        
	        android:layout_weight="2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	    	android:layout_gravity="left" />
    
	    <EditText 
	        android:id="@+id/NU_EtConfPassword"
	        android:textSize="16sp"
	        android:textColor="#FFFFFF"
	        
	        android:hint="@string/tv_ConfirmPassword"
        	
        	android:layout_weight="3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword" />
		
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
		
		<Button        
	        android:id="@+id/NU_BtCancel"
	        android:textColor="#FFFFFF"
	        
	        android:layout_weight="3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	    	android:text="@string/bt_NU_Cancel"/>
    
	    <Button         
	        android:id="@+id/NU_BtCreate"
	        android:textColor="#FFFFFF"
	        
	        android:layout_weight="3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	    	android:text="@string/bt_NU_Create"/>
		
	</LinearLayout>
	
</LinearLayout>

